--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div>
-        <img src="Rectangle 1.png" alt="*" class="logo">
+        <img src="./vecteezy_restaurant-logo-on-letter-t-concept-with-chef-hat-spoon-and_17737757.jpg" alt="*" class="logo">
         <img src="98b474780c2ce09162813d6423f4827a.png" alt="*" class="mainimg">
         <h1>T</h1>
         <h2>asty <br>Trails</h2>
-        <p>On the tasty trail <br> every bite is a <br> step towards <br>satisfaction</p>
+        <p>On the tasty trail <br> every bite is a <br> step towards <br>satisfaction.</p>
     </div>
 
     <div>
@@ -46,8 +46,8 @@
     </div>
     <footer class="down">
         <div class="content">
-            <a href="index.html"><img src="Rectangle 1.png" alt="gbgbg" class="logo1"></a>
-            <h1 class="name">"Thanks form visted our website</h1>
+            <a href="index.html"><img src="./vecteezy_restaurant-logo-on-letter-t-concept-with-chef-hat-spoon-and_17737757.jpg" alt="gbgbg" class="logo1"></a>
+            <h1 class="name">"Thanks for visted our website</h1>
         </div>
     </footer>
 </body>
